--- a/pom.xml
+++ b/pom.xml
@@ -129,9 +129,13 @@
                 <version>3.6.2</version>
                 <configuration>
                     <changeLogFile>${basedir}/db/master.xml</changeLogFile>
+                    <!--suppress UnresolvedMavenProperty -->
                     <url>${db.url}</url>
+                    <!--suppress UnresolvedMavenProperty -->
                     <driver>${db.driver}</driver>
+                    <!--suppress UnresolvedMavenProperty -->
                     <username>${db.username}</username>
+                    <!--suppress UnresolvedMavenProperty -->
                     <password>${db.password}</password>
                 </configuration>
                 <executions>
@@ -142,6 +146,14 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>14</source>
+                    <target>14</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
